sources/api/schnauzer/tests/templates/fails/04_duplicate_helpers.template
[required-extensions]
helpful = { version = "v1", helpers = ["helpful_helper"] }
overly-helpul = { version = "v1", helpers = ["helpful_helper" ] }
+++
{{ helpful_helper "please help" }}
